--- a/slideoutmenu.html
+++ b/slideoutmenu.html
@@ -6,37 +6,25 @@
 </head>
 
 <body>
-	<div id="box1"><span>Menu</span></div>
-	<div id="wrapper">
-		<h1>Content Push Menu</h1>
-		<input type="submit" id="clickme" value="slideMe">
-		<section class='right'>
-			<h1>Sidebar</h1>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
-		</section>
+	<div id="box1"><span>Menu</span>
+</div>
+<div id="wrapper">
+    	<h1>Content Push Menu Js No jQuery</h1>
 
-		<section class='left'>
-			<h1>Main</h1>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
-		</section>
+    <input type="submit" id="clickme" value="Menu">
+    <section class='right'>
+        	<h1>Sidebar</h1>
 
-		<footer>Footer info &copy;</footer>
-	</div>
-	<div id="overlay"></div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </section>
+    <section class='left'>
+        	<h1>Main</h1>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </section>
+    <footer>Footer info &copy;</footer>
+</div>
+<div id="overlay"></div>
 	
 <script src="class.js"></script>
 <script src="contentpush.js"></script>
